# ChangeLog for kde-base/arts
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/arts/ChangeLog,v 1.273 2008/09/14 23:50:38 carlo Exp $

  14 Sep 2008; Carsten Lohrke <carlo@gentoo.org>
  +files/arts-1.5.10-unfortify.diff:
  Missing patch...

*arts-3.5.10 (13 Sep 2008)

  13 Sep 2008; Carsten Lohrke <carlo@gentoo.org> +arts-3.5.10.ebuild:
  Version bump.

  27 Jul 2008; Carsten Lohrke <carlo@gentoo.org> arts-3.5.9.ebuild:
  QA: Get rid of deprecated qt_min_version().

  11 Jun 2008; Timo Gurr <tgurr@gentoo.org>
  +files/arts-1.5.9-glibc2.8-build-fix.patch, arts-3.5.9.ebuild:
  Fix arts-3.5.9.ebuild, glibc-2.8 compatibility bug #225763.

  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -arts-3.5.8.ebuild:
  Removed old versions.

  18 May 2008; Markus Meier <maekke@gentoo.org> ChangeLog:
  amd64/x86 stable, bug #221063

  18 May 2008; Markus Meier <maekke@gentoo.org> arts-3.5.9.ebuild:
  amd64/x86 stable, bug #221063

  12 May 2008; Raúl Porcel <armin76@gentoo.org> ChangeLog:
  alpha/ia64/sparc stable wrt #221063

  12 May 2008; Jeroen Roovers <jer@gentoo.org> arts-3.5.9.ebuild:
  Stable for HPPA (bug #221063).

  12 May 2008; Brent Baude <ranger@gentoo.org> arts-3.5.9.ebuild:
  Marking arts-3.5.9 ppc and ppc stable for bug 221063

  12 May 2008; Raúl Porcel <armin76@gentoo.org> arts-3.5.9.ebuild:
  alpha/ia64/sparc stable wrt #221063

  11 May 2008; Markus Rothe <corsair@gentoo.org> arts-3.5.9.ebuild:
  Stable on ppc64; bug #221063

*arts-3.5.9 (20 Feb 2008)

  20 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +files/arts-1.5.5-gcc4.3-build-fix.diff, +arts-3.5.9.ebuild:
  Version bump to KDE 3.5.9.

  17 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -files/arts-1.5.5-gcc4.3-build-fix.diff, -arts-3.5.5.ebuild:
  Spring cleaning

  31 Jan 2008; Brent Baude <ranger@gentoo.org> arts-3.5.8.ebuild:
  Marking arts-3.5.8 ppc for bug 207634
