@@ -7,6 +7,6 @@ AUX arts-1.5.9-glibc2.8-build-fix.patch 358 RMD160 6e4f140f3448ab4f46653b57131d6
 DIST arts-1.5.10.tar.bz2 973382 RMD160 8c237ebd06ac82b88cf7394722fb8da459902ee7 SHA1 2e5507f64a4a4a9ad446cc987dff157e38f98274 SHA256 92e23839eb4042d2a15cf59614824cadc0a23e92fa139c50d5e3bd4989a8cc39
 DIST arts-1.5.9.tar.bz2 973190 RMD160 24766153ba9572c2b6fdc93dd3a2ac7ccd0ea19b SHA1 5543a6d82a6188d53eec32c09a0d2b3cc6cd4c5c SHA256 c80d70361aea4a8e2b62043b5fdf1c5f8df36a10c76b08681bd7b2065a6f024e
 EBUILD arts-3.5.10.ebuild 2695 RMD160 ad74e04ac8247d438307fec20722cf00d80454ff SHA1 562249479237f528828979bb3756d423d13e559f SHA256 7a1f0acd372de0f09717ac031b0e21ece1dad6997e73107892ba73fdf60a913c
-EBUILD arts-3.5.9.ebuild 2979 RMD160 3386911421743cf4b4395edc285c71ddd25129d1 SHA1 a5df2f24572f447315a8eaf6cb637872f61ab13e SHA256 d6801b96156e73c5e154d7fe794151d3031f57ec662d429d08d4e9baacf4185d
-MISC ChangeLog 34868 RMD160 e993a8050f35ce06d467216822baac371e92f212 SHA1 f5c349e982429395b7628a38b56e259503c13aab SHA256 3a61821be9a0d626af6a477f0aeb53f89b6647d0aa70d6759ee625660dd1c881
+EBUILD arts-3.5.9.ebuild 3030 RMD160 59b0739aa776b5505c440b9272f00ce4b6197ce8 SHA1 e8f84667390e809343e78f964a63786864055e25 SHA256 bd0dc626134d0b426db9067c69adb0b1baf9ad0dc21673c4d0ac12bf364aea51
+MISC ChangeLog 34999 RMD160 609b9a8698f37ff43a17d0c0cb6e0b766beea231 SHA1 59dac86af6ffd1eaefeabbc0c2bd3a719c9eff62 SHA256 62e9406c9fdd74c37af0c0f1a0044d311772adbb97c2ff341a4654b4f2ff7079
 MISC metadata.xml 285 RMD160 3eaa4232dc714bfdecf09c9979d84e7ade07cb4a SHA1 14f9eec98228e840a9ca78d3012f911e99b8d52d SHA256 18a79bd9926cb585c0f01552df08810bf33252e3550ea98b021f3151075d6cf5
